# pyball

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MIGRATION.md  camera.py  main.py  png.py  progress_report.sh  pyball.py  pyproject.toml  readme.md  render.py  shader.py  spacehash.py  test_migration.py  todo.md
.beads/: issues.jsonl
.github/: copilot-instructions.md
examples/: README.md
migration-test/: README.md  api_findings.md  complete_api_mapping.md  exploration_output.txt  explore_pdbstruct.py  proxy_refactoring_plan.md  test_api_compatibility.py  wrapper_approach.py
pyball/: __init__.py  __main__.py  render.py  rendering.py  spacehash.py  structures.py  viewer.py
scripts/: format.sh  lint.sh  run.sh  test.sh
