[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyball"
version = "1.1.0"
description = "Molecular visualization tool for PDB files using modern pdbstruct library"
readme = "readme.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Bosco Ho", email = "boscoh@gmail.com"}
]
keywords = ["pdb", "protein", "visualization", "molecular", "structure", "opengl"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "numpy>=1.20.0",
    "vispy>=0.14.0",
    "pyopengl>=3.1.0",
    "pyqt6>=6.0.0",
    "pdbstruct>=0.1.0",
]

[project.scripts]
pyball = "pyball:main"

[project.optional-dependencies]
dev = [
    "ipython>=8.0.0",
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[tool.uv]
dev-dependencies = []

[tool.uv.sources]
pdbstruct = { git = "https://github.com/boscoh/pdbstruct.git" }

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["pyball", "geometry"]
